# TalkerAI

./: .cursorignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  SECURITY.md  podman-compose.yml  setup-team.sh
.cursor/: code_writing.mdc
.cursor/rules/: cli-development.mdc  code-writing.mdc  compiler-development.mdc  create-rules.mdc  debugging.mdc  devops-rules.mdc  docker-containerization.mdc  multi-language-codegen.mdc  navigation.mdc  project-management.mdc  refactoring.mdc  rust-development.mdc  security-rules.mdc  service-integrations.mdc  testing-guidelines.mdc
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/hooks/: pre-commit  pre-push
.github/workflows/: ci-frontend.yml  ci-rust.yml  security-scan.yml
agents/mcp-hub/: Cargo.toml
agents/mcp-hub/src/: lib.rs
agents/ollama-integration/: Cargo.toml
agents/ollama-integration/src/: lib.rs
api-server/: Cargo.toml
auth/: Cargo.toml
auth/src/: lib.rs
backend/ai-apis/: Cargo.toml
backend/ai-apis/src/: lib.rs
backend/api-server/: Cargo.toml
backend/api-server/src/: config.rs  main.rs  schema.rs
backend/external-services/: Cargo.toml
backend/external-services/src/: calendar.rs  email.rs  google.rs  lib.rs  microsoft.rs  storage.rs
cli/: Cargo.toml
compiler/: Cargo.toml
compiler/src/: error.rs  lexer.rs  parser.rs
core/: Cargo.toml
core/cognitive-kernel/src/: adaptive_planner.rs  intent_graph.rs  lib.rs
core/compiler/src/: ast.rs  codegen.rs  lib.rs
core/cuda-processor/: Cargo.toml
core/cuda-processor/src/: lib.rs
core/executor/src/: lib.rs
core/jarvis-core/: Cargo.toml  README.md
core/jarvis-core/agent-mesh/: Cargo.toml
core/jarvis-core/agent-mesh/src/: lib.rs
core/jarvis-core/cognitive-kernel/: Cargo.toml
core/jarvis-core/cognitive-kernel/examples/: basic_usage.rs
core/jarvis-core/cognitive-kernel/src/: lib.rs
core/jarvis-core/memory-continuum/: Cargo.toml
core/jarvis-core/memory-continuum/src/: lib.rs
core/wrappers/: Cargo.toml
data/vector-db/: Cargo.toml
data/vector-db/src/: lib.rs
deploy/docker/: Containerfile  Dockerfile  init.sql
docker/: Containerfile  docker-compose.yml  init.sql
docs/examples/: advanced.tpp
examples/: hello.tpp
executor/: Cargo.toml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend-server/: Cargo.toml
frontend/electron/: main.ts  preload.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: command-palette.tsx  layout.tsx  page-transition.tsx
frontend/src/lib/: utils.ts
frontend/src/pages/: intent-processor.tsx  memory-vault.tsx  mission-control.tsx  settings.tsx
frontend/src/store/: app-store.ts
infra/k8s/: configmap.yaml  ingress.yaml  namespace.yaml  postgresql.yaml  redis.yaml
infra/k8s/base/: deployment.yaml  kustomization.yaml  vault-auth.yaml
infra/k8s/overlays/dev/: kustomization.yaml
infra/k8s/overlays/production/: kustomization.yaml
infra/vault/config/: vault-dev.hcl  vault-prod.hcl
infra/vault/dev/policies/: talk-plus-plus-dev.hcl
infra/vault/prod/policies/: talk-plus-plus-prod.hcl
k8s/: secrets.yaml  talkpp-deployment.yaml
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: build-podman.sh
simulator/: Cargo.toml
simulator/src/: lib.rs
tests/benches/: parser_bench.rs
tools/cli/src/: main.rs  talkppc.rs  talkpprun.rs
tools/scripts/: deploy-k8s.sh
wrappers/src/: lib.rs
