[workspace]
members = [
    "compiler",
    "runtime",
    "auth",
    "executor", 
    "simulator",
    "wrappers",
    "cli",
    "api-server",
    "frontend-server"
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Diatonic Visuals <engineering@diatonicvisuals.com>"]
license = "MIT"
repository = "https://github.com/diatonicvisuals/talkplusplus"
description = "Talk++ Language Module & Rust Serverless Runtime"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4"] }

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
redis = { version = "0.24", features = ["tokio-comp"] }

# Authentication
jsonwebtoken = "9.0"
oauth2 = "4.0"

# Parsing and compilation
nom = "7.0"
logos = "0.14"
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"

# Container runtime
wasmtime = "15.0"
containerd-client = "0.4"

# Testing
criterion = "0.5"
tempfile = "3.0" 