[package]
name = "talkpp-api-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Talk++ REST API server"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Database
sqlx = { workspace = true }
redis = { workspace = true }

# Local crate dependencies
talkpp-compiler = { path = "../compiler" }
talkpp-runtime = { path = "../runtime" }
talkpp-auth = { path = "../auth" }
talkpp-simulator = { path = "../simulator" } 