[package]
name = "talkpp-compiler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Talk++ DSL compiler and code generator"

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Parsing dependencies
nom = { workspace = true }
logos = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }

# Additional compiler dependencies
regex = "1.0"
indexmap = "2.0"

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "parser_bench"
harness = false 