[workspace]
resolver = "2"
members = [
    "compiler",
    "runtime", 
    "auth",
    "executor",
    "simulator",
    "wrappers",
    "cli",
    "api-server",
    "frontend-server",
    # New comprehensive modules
    "mcp-hub",
    "vector-db",
    "cuda-processor", 
    "ollama-integration",
    "external-services",
    "ai-apis",
    "electron-app",
    "graphql-api",
    "data-pipeline"
]

[workspace.package]
version = "0.3.0"
edition = "2021"
authors = ["Talk++ Team"]
license = "MIT"
repository = "https://github.com/yourusername/talkplusplus"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database dependencies
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
redis = { version = "0.24", features = ["tokio-comp"] }

# Web framework dependencies
axum = { version = "0.7", features = ["ws", "headers", "multipart"] }
tower = { version = "0.4", features = ["timeout", "rate-limit"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream", "multipart"] }

# Async/concurrency
futures = "0.3"
async-trait = "0.1"

# Serialization
bincode = "1.3"

# CLI
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"

# Crypto
jsonwebtoken = "9.0"

# MCP Integration
serde_yaml = "0.9"
tonic = { version = "0.10", features = ["tls"] }
prost = "0.12"

# Vector Database
qdrant-client = "1.7"
fastembed = "3.0"

# CUDA/ML
candle-core = "0.3"
candle-nn = "0.3"
candle-transformers = "0.3"

# External Service APIs
google-apis-common = "5.0"
google-drive3 = "5.0"
microsoft-graph = "0.1"

# GraphQL
async-graphql = "6.0"
async-graphql-axum = "6.0" 