[package]
name = "talkpp-frontend-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Talk++ frontend web server"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Local crate dependencies
talkpp-api-server = { path = "../api-server" } 