[package]
name = "talkpp-mcp-hub"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
reqwest.workspace = true
futures.workspace = true
async-trait.workspace = true
serde_yaml.workspace = true
tonic.workspace = true
prost.workspace = true

# MCP specific dependencies
jsonrpc-core = "18.0"
jsonrpc-http-server = "18.0"
websocket = "0.26"
url = "2.4" 