[package]
name = "talkpp-ai-apis"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
reqwest.workspace = true
futures.workspace = true
async-trait.workspace = true

# API specific dependencies
base64 = "0.21"
hmac = "0.12"
sha2 = "0.10" 