[package]
name = "talk-plus-plus-api"
version = "0.1.0"
edition = "2021"
description = "REST and GraphQL API server for Talk++ AI Middleware Platform"
authors = ["Talk++ Team <team@talk-plus-plus.com>"]
license = "MIT"
repository = "https://github.com/your-org/talk-plus-plus"

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["macros", "headers", "multipart", "ws"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "compression-gzip", "trace", "request-id", "timeout"] }
hyper = { version = "1.0", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }

# GraphQL
async-graphql = { version = "7.0", features = ["chrono", "uuid", "url"] }
async-graphql-axum = "7.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Authentication & Security
jsonwebtoken = "9.0"
argon2 = "0.5"
oauth2 = "4.4"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Async & Concurrency
tokio-stream = "0.1"
dashmap = "5.5"
arc-swap = "1.6"

# HTTP Client
reqwest = { version = "0.11", features = ["json", "rustls-tls", "stream"] }

# Time & Date
chrono = { version = "0.4", features = ["serde", "clock"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Logging & Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.22"
opentelemetry = "0.21"
opentelemetry-jaeger = "0.20"
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Validation
validator = { version = "0.17", features = ["derive"] }

# File handling
tempfile = "3.8"
mime = "0.3"

# Cryptography
ring = "0.17"
base64 = "0.21"

# Talk++ Core Integration
jarvis-core = { path = "../jarvis-core/cognitive-kernel" }

# Vector Database Integration
qdrant-client = "1.7"
chroma-rs = "0.1"

# AI/ML Integration
tiktoken-rs = "0.5"
candle-core = "0.3"
candle-nn = "0.3"

[dev-dependencies]
tower-test = "0.4"
axum-test = "14.0"
tokio-test = "0.4"
tempfile = "3.8"
criterion = "0.5"

[[bin]]
name = "api-server"
path = "src/main.rs"

[[bench]]
name = "api_benchmarks"
harness = false

[features]
default = ["postgres", "redis", "metrics"]
postgres = []
redis = []
metrics = []
jaeger = [] 