[workspace]
members = [
    "cognitive-kernel",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
dashmap = "6.0"
petgraph = "0.6"
futures = "0.3"
crossbeam = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1 