[package]
name = "talkpp-wrappers"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Talk++ polyglot language runtime wrappers"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Process management
tempfile = { workspace = true }
which = "5.0" 