[package]
name = "agent-mesh"
version = "0.1.0"
edition = "2021"
description = "Distributed agent mesh implementing Sense-Reason-Act-Reflect-Teach pattern for JARVIS AI"
authors = ["JARVIS Team <team@talk-plus-plus.com>"]
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# Serialization & Data
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Time & UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Networking & Communication
tonic = "0.10"
prost = "0.12"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Concurrency & Collections
dashmap = "5.5"
arc-swap = "1.6"
parking_lot = "0.12"
tokio-util = "0.7"

# Error handling & Logging
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"

# State machines
state-machine = "0.1"

# Message passing
crossbeam = "0.8"
flume = "0.11"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Core integration
cognitive-kernel = { path = "../cognitive-kernel" }
memory-continuum = { path = "../memory-continuum" }

[build-dependencies]
tonic-build = "0.10"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
tempfile = "3.8"

[[bench]]
name = "agent_benchmarks"
harness = false

[features]
default = ["grpc", "redis-backend"]
grpc = ["tonic", "prost"]
redis-backend = []
distributed = [] 