[package]
name = "memory-continuum"
version = "0.1.0"
edition = "2021"
description = "Multi-layer memory system for JARVIS AI with STM, LTM, Procedural, Episodic, and Spatial memory"
authors = ["JARVIS Team <team@talk-plus-plus.com>"]
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"

# Serialization & Data
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Time & UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Concurrency & Collections
dashmap = "5.5"
arc-swap = "1.6"
parking_lot = "0.12"

# Vector operations & ML
candle-core = "0.3"
candle-nn = "0.3"
ndarray = "0.15"

# Database & Storage
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
qdrant-client = "1.7"

# Error handling & Logging
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"

# Graph operations
petgraph = "0.6"

# Cognitive kernel integration
cognitive-kernel = { path = "../cognitive-kernel" }

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
tempfile = "3.8"

[[bench]]
name = "memory_benchmarks"
harness = false

[features]
default = ["postgres", "qdrant"]
postgres = []
qdrant = []
spatial = [] 